--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -25,7 +25,7 @@
                                 <div class="producto-favorito"><!--<i class="fas fa-heart">--><i class="far fa-heart"></i></div>
                             </div>
                             <div class="producto-imagen">
-                                <img src= <%= product.image%>.png >
+                                <img src= <%= product.image%>>
                             </div>
                             <div class="producto-footer">
                                 <div class="producto-titulo">
