arreglo detalles index como Logo, menu, etc

--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -22,7 +22,7 @@
                         <div class="producto-contenedor-secundario">
                             <div class="producto-header">
                                 <div class="producto-descuento"><%= product.discount%></div>
-                                <div class="producto-favorito"><!--<i class="fas fa-heart">--><i class="far fa-heart"></i></div>
+                                <div class="producto-favorito"><i class="fas fa-heart"></i><!-- <i class="far fa-heart"></i> --></div>
                             </div>
                             <div class="producto-imagen">
                                 <img src= <%= product.image%>.png >
