--- a/site/public/styles/home.css
+++ b/site/public/styles/home.css
@@ -65,9 +65,10 @@ header {
     left: 15px;
 }
 #logo{
-    font-family: 'Devonshire', regular;
-    font-size: 2.5rem;
-    color:#FFF131;
+    font-family: 'Jomhuria', cursive;
+    font-size: 4rem;
+    color:#FFF;
+    text-transform: uppercase;
     text-decoration: none;
 }
 
