--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -41,7 +41,7 @@
                                 <button onclick="addSubtractRemoveQuantity(<%= product.id%>,'subtract')" class="boton-sumarrestar">-</button >
                                 <span id="quantitySku=<%= product.id%>">0</span>
                                 <button onclick="addSubtractRemoveQuantity(<%= product.id%>,'add')" class="boton-sumarrestar">+</button >
-                                <button onclick="addSubtractRemoveQuantity(<%= product.id%>,'create')" class="boton-agregar">Agregar</button >
+                                <div onclick="addSubtractRemoveQuantity(<%= product.id%>,'create')" class="boton-agregar">Agregar</div >
                             </div>
                         </div>
                     </div>
