Fix Bug -> shopping cart refreshed Ok, bug = not always refreshed

--- a/site/src/views/products/productCart.ejs
+++ b/site/src/views/products/productCart.ejs
@@ -14,7 +14,7 @@
                     <% products.forEach(product => { %>
                         <div class="carrito-item-descripcion">
                             <div class="imagenProductoCarrito">
-                                <img src= "<%= product.product.image%>.png">
+                                <img src= "<%= product.product.image%>">
                             </div>
                             <div class="carrito-detallesProducto">
                                 <p class="producto-detalle"> <%= product.product.brand%> </p>
