--- a/site/public/styles/new_css_otros.css
+++ b/site/public/styles/new_css_otros.css
@@ -32,6 +32,11 @@
 /* .max-width100{
     max-width: 100%;
 } */
+.categoria_desktop{
+display: flex;
+    flex-wrap: auto;
+    overflow: auto;
+}
 @media (min-width: 577px) {
     .subcategoria-container > div {
         max-width: 100%;
