--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -11,24 +11,56 @@
     <div class="contenedor">
       
         <div>
-          <form action="registro" method="POST">
+          <form action="registro" method="POST" id="form-register">
               <div class="">
                 <label for="email">Email</label>
-                <input class="" type="text" name="email" id="email" placeholder="Correo electrónico">
+                <input class="" type="text" name="email" id="email" placeholder="Correo electrónico" value="<%= locals.old && old.email ? old.email :''%>" >
               </div>
+              <!-- Error lanzado por frontend -->
+              <div class="error-email error-message text-danger"> 
+              </div>
+              <!-- Error lanzado por backend -->
+              <% if (locals.errors && errors.email) { %>
+                <div class="text-danger"> 
+                  <%= errors.email.msg  %> 
+                </div> 
+              <% } %> 
+
               <div class="">
-                <label for="email">Nombre Completo</label>
-                <input class="" type="text" name="fullName" id="fullName" placeholder="Nombre Completo">
+                <label for="fullName">Nombre Completo</label>
+                <input class="" type="text" name="fullName" id="fullName" placeholder="Nombre Completo" value="<%= locals.old && old.fullName ? old.fullName :''%>">
               </div>
+
+              <!-- Error lanzado por frontend -->
+              <div class="error-fullName error-message text-danger"> 
+              </div>
+              <!-- Error lanzado por backend -->
+              <% if (locals.errors && errors.fullName) { %>
+                <div class="text-danger"> 
+                  <%= errors.fullName.msg  %> 
+                </div> 
+              <% } %>
+
               <div class="">
                 <label for="password">Contraseña</label>
-                <input class="" type="password" name="password" id="password" placeholder="Contraseña">
+                <input class="" type="password" name="password" id="password" placeholder="Contraseña" value="<%= locals.old && old.password ? old.password :''%>">
               </div>
+
+              <!-- Error lanzado por frontend -->
+              <div class="error-password error-message text-danger"> 
+              </div> 
+              <!-- Error lanzado por backend -->
+              <% if (locals.errors && errors.password) { %>
+                <div class="error-password error-message text-danger"> 
+                  <%= errors.password.msg  %> 
+                </div> 
+              <% } %>
               <div>
                 <button type="submit">Registrarte</button>
               </div>
           </form>
         </div>
       </div>
+      <script type="text/javascript" src="/js/formsValidators.js"></script>
   </body>
 </html>
