Validaciones: Registro, Login + Crear y editar producto

--- a/site/src/views/partials/categoriesCarouselDesktop.ejs
+++ b/site/src/views/partials/categoriesCarouselDesktop.ejs
@@ -3,6 +3,6 @@
         <% locals.categories.forEach(category => { %>
             <a href="/categorias/<%=category.path%>"><%= category.category%></a>
         <% });%>
-            <a class="menu-inicio-2" href="#">Iniciar sesión<i class="fas fa-user"></i></a>
+            <a class="menu-inicio-2" href="/usuario/login">Iniciar sesión<i class="fas fa-user"></i></a>
     </nav>
 </div>
