--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -61,6 +61,6 @@
           </form>
         </div>
       </div>
-      <script type="text/javascript" src="/js/formsValidators.js"></script>
+      <script type="text/javascript" src="/js/formsValidatorsLogin.js"></script>
   </body>
 </html>
