--- a/site/src/views/products/productCreate.ejs
+++ b/site/src/views/products/productCreate.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <body>
-<form style="max-width: 500px;" action="/productos/crear" method="POST"  enctype="multipart/form-data"> 
+<form style="max-width: 500px;" action="/productos/crear" method="POST" id='form-product' enctype="multipart/form-data"> 
+    
+    <!-- Error lanzado por frontend -->
+        <div class="error-brand error-message text-danger"> 
+        </div>
+    <!-- FIN. Error lanzado por frontend -->
     <!-- Error lanzado por backend -->
     <% if (locals.errors && locals.errors.brand) { %>
         <div class="text-danger"> 
@@ -10,23 +15,31 @@
         <!-- FIN. Error lanzado por backend -->
     <div>
         <label for="brand"> Marca</label>
-        <input type="text" name='brand' value='a'>
+        <input type="text" name='brand' id='brand'>
     </div>
-        <!-- Error lanzado por backend -->
-        <% if (locals.errors && locals.errors.description) { %>
+    <!-- Error lanzado por frontend -->
+        <div class="error-description error-message text-danger"> 
+        </div>
+    <!-- FIN. Error lanzado por frontend -->
+    <!-- Error lanzado por backend -->
+         <% if (locals.errors && locals.errors.description) { %>
             <div class="text-danger"> 
-              <%= errors.description.msg  %> 
+                <%= errors.description.msg  %> 
             </div> 
-            <% } %> 
-            <!-- FIN. Error lanzado por backend -->
+        <% } %> 
+    <!-- FIN. Error lanzado por backend -->
     <div>
         <label for="description">Descripción</label>
-        <input type="text" name="description">
+        <input type="text" name="description" id='description'>
     </div>
     <div>
         <label for="display">Presentación</label>
         <input type="text" name="display">
     </div>
+    <!-- Error lanzado por frontend -->
+    <div class="error-image error-message text-danger"> 
+    </div>
+    <!-- FIN. Error lanzado por frontend -->
     <!-- Error lanzado por backend -->
     <% if (locals.errors && locals.errors.image) { %>
         <div class="text-danger"> 
@@ -36,7 +49,7 @@
     <!-- FIN. Error lanzado por backend -->
     <div>
         <label for="image">Imagen</label>
-        <input type="file" name="image">
+        <input type="file" accept=".jpg,.png,.jpeg,.gif" name="image" id='image'>
     </div>
     <div>
         <label for="price">Precio</label>
@@ -65,6 +78,6 @@
 
 
 </form>
-
+<script type="text/javascript" src="/js/formsValidatorsProducts.js"></script>
 </body>
 </html>
