Carrito, agregar 0 elementos + $ 0 en index

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -14,11 +14,11 @@
             
             <div><%- include('searcher') %></div>
         <div id="carrito">
-            <div id="cart-amount" class="total-carrito"></div>
+            <div id="cart-amount" class="total-carrito">$ 0</div>
             <div><i class="fas fa-shopping-cart"></i>
             </div>
             <div class="circulo-rojo centrar-hijos-vertical-horizontal">
-                <div id="cart-elements" class="inline-block blanco-negrita"></div>
+                <div id="cart-elements" class="inline-block blanco-negrita">0</div>
             </div>
         </div>
     </div>
