--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -7,6 +7,7 @@
     <header>
     <%- include('partials/header') %>
     <%- include('partials/categoriesCarouselDesktop') %>
+    <%- include('partials/categoriesCarousel') %>
     </header>
     <div class="container">
         <div id="home-catalogo">
