--- a/site/src/views/categories/singleCategory.ejs
+++ b/site/src/views/categories/singleCategory.ejs
@@ -4,8 +4,8 @@
 <body>
     <header>
         <%- include('../partials/header') %>
+        <%- include('../partials/categoriesCarouselDesktop') %>
         <%- include('../partials/categoriesCarousel') %>
-
     </header>
     <div class="container-subcategorias">
 
