--- a/site/src/views/partials/categoriesCarousel.ejs
+++ b/site/src/views/partials/categoriesCarousel.ejs
@@ -3,7 +3,7 @@
         <div class="categoria">
             <a href="/usuario/mis-pedidos">
                 <div class="imagen-categoria">
-                    <img src= "/img/groceries.png"> 
+                    <img src= "/img/categories/repetir.png"> 
                 </div>
                 <div class="nombre-categoria">
                     <span id="categoria1">Repetir pedido</span>
@@ -13,7 +13,7 @@
         <div class="categoria">
             <a href="">
                 <div class="imagen-categoria">
-                    <img src= "/img/groceries.png"> 
+                    <img src= "/img/categories/todas.png"> 
                 </div>
                 <div class="nombre-categoria">
                     <span id="categoria1">Todas las categorias</span>
