--- a/site/src/views/products/productCreate.ejs
+++ b/site/src/views/products/productCreate.ejs
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
+<html lang="es">
+<%- include('../partials/head') %>
+
 <body>
+    <header>
+        <%- include('../partials/header') %>
+        
+    </header>
+    <br>
 <form style="max-width: 500px;" action="/productos/crear" method="POST" id='form-product' enctype="multipart/form-data"> 
     
     <!-- Error lanzado por frontend -->
