--- a/site/src/views/categories/productsSubCategory.ejs
+++ b/site/src/views/categories/productsSubCategory.ejs
@@ -4,55 +4,48 @@
 <body>
     <header>
         <%- include('../partials/header') %>
+        <%- include('../partials/categoriesCarouselDesktop') %>
         <%- include('../partials/categoriesCarousel') %>
-        <%- include('../partials/searcher') %>
     </header>
-    <div class="titulo-subcategoria"><%- categoryName %> / <%- subCategoryName %></div>
-    <div class="subcategoria-container">
+    <div id="contenedor-subcategoria"> 
+        <div class="titulo-subcategoria"><br><%- categoryName %> / <%- subCategoryName %></div>
+        <div class="subcategoria-container">
         <% products.forEach(product => { %>
-
-            <div class="producto-contenedor margen-derecho max-width100">
+            <div class="producto-contenedor margen-derecho">
                 <div class="producto-contenedor-secundario">
                     <div class="producto-header">
-                        <div class="producto-descuento"><%= product.discount%>
-                        </div>
-                        <div class="producto-favorito"><!--<i class="fas fa-heart">--><i class="far fa-heart"></i>
-                        </div>
+                        <div class="producto-descuento <%= product.discount === '0%' ? 'ocultar' : '' %>"><%= product.discount%></div>
+                        <div class="producto-favorito"><i class="fas fa-heart"></i><!-- <i class="far fa-heart"></i> --></div>
                     </div>
                     <div class="producto-imagen">
-                        <img src= "<%= product.image%>" >
+                        <img src= <%= product.image%>>
                     </div>
                     <div class="producto-footer">
                         <div class="producto-titulo">
-                            <p class="producto-detalle"> <%= product.brand%><%= product.description%>
+                            <p class="producto-detalle"> <%= product.description%>
                             <span class="producto-presentacion"> x <%= product.display%></span>
                             </p>
                         </div>
                         <div class="producto-precios">
                             <span class="precio-nuestro"> <%= product.price%>
-                            <span class="precio-competencia"> <%= product.competitorPrice%> </span>
+                            <span class="precio-competencia <%= product.discount === '0%' ? 'ocultar' : '' %>"> <%= product.oldPrice%> </span><!-- Cambiar a descuento -->
                             </span>
                         </div>
-                        <div class="boton-agregar">Agregar</div>
+                        <div id="botonera">
+                            <div id="botones-superiorSKU=<%= product.id%>" class="ocultar">
+                                <button onclick="addSubtractRemoveQuantity(<%= product.id%>,'subtract')" id="subtractOneSku=<%= product.id%>" class="boton-sumarrestar ">-</button >
+                                <span id="quantitySku=<%= product.id%>" class="quantityProduct">0</span>
+                                <button onclick="addSubtractRemoveQuantity(<%= product.id%>,'add')" id="addOneSku=<%= product.id%>" class="boton-sumarrestar ">+</button >
+                            </div>
+                            <div id="botones-inferiorSKU=<%= product.id%>" class="mostrar" >
+                                <div onclick="addSubtractRemoveQuantity(<%= product.id%>,'create')" id="addCartSku=<%= product.id%>" class="boton-agregar">Agregar</div >
+                            </div>
+                            </div>
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <% });%>
+        </div>
     </div>
-
 </body>
 </html>
