--- a/site/src/views/partials/searcher.ejs
+++ b/site/src/views/partials/searcher.ejs
@@ -1,8 +1,8 @@
 <div id="search">
     <!--Inicio <barraBuscar> -->
-        <div class="buscador">
-            <input type="text">
-                <div class="icono"><i class="fas fa-search"></i></div>
-        </div>
+        <form action="/search" method="GET" class="buscador">
+            <input type="text" placeholder="Buscá tu producto" name="query">
+                <button class="icono"><i class="fas fa-search"></i></button>
+        </form>
     <!--Fin </barraBuscar> -->
 </div>
